--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,8 @@
 {
   "version": 1,
   "cli": {
-    "defaultCollection": "@nrwl/angular"
+    "defaultCollection": "@nrwl/angular",
+    "analytics": "8b4c5103-3f6a-4cbd-9187-53954aac5277"
   },
   "defaultProject": "ng-custom-dashboard",
   "schematics": {
@@ -51,7 +52,10 @@
               "apps/ng-custom-dashboard/src/favicon.ico",
               "apps/ng-custom-dashboard/src/assets"
             ],
-            "styles": ["apps/ng-custom-dashboard/src/styles.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "apps/ng-custom-dashboard/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -112,7 +116,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/ng-custom-dashboard"],
+          "outputs": [
+            "coverage/apps/ng-custom-dashboard"
+          ],
           "options": {
             "jestConfig": "apps/ng-custom-dashboard/jest.config.js",
             "passWithNoTests": true
@@ -141,7 +147,9 @@
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["apps/ng-custom-dashboard-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/ng-custom-dashboard-e2e/**/*.{js,ts}"
+            ]
           }
         }
       }
