--- a/apps/ng-custom-dashboard/tsconfig.editor.json
+++ b/apps/ng-custom-dashboard/tsconfig.editor.json
@@ -2,6 +2,9 @@
   "extends": "./tsconfig.json",
   "include": ["**/*.ts"],
   "compilerOptions": {
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
   }
 }
